--- a/assets/scss/_assets.scss
+++ b/assets/scss/_assets.scss
@@ -75,4 +75,10 @@
         justify-content: center;
         text-align: center;
     }
+    h2 {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        text-transform: uppercase;
+    }
 }
