--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -5,6 +5,7 @@ $white3: #FFFFFF1A;
 $white4: #DFDFDF;
 $gray: #5C5C5C;
 $gray2: #AAAAAA;
+$gray3: #888E93;
 $black: #2C2C2C;
 $blue: #005AA3;
 $blue2: #014379;
