--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -490,7 +490,7 @@ td {
 .header__pay-path {
   display: flex;
   align-items: center;
-  padding-bottom: 2%;
+  padding: 20px 0;
 }
 .header__pay-path a {
   margin: 0 20px 0 0;
@@ -504,6 +504,132 @@ td {
   font-size: 16px;
   line-height: 16px;
   font-weight: 400;
+}
+.header__villages {
+  background-image: url("../img/bg/bg_villages.webp");
+  background-color: #2C2C2C;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20px 0 0 0;
+}
+.header__villages-path {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1490196078);
+  padding: 20px 0;
+}
+.header__villages-path a {
+  margin: 0 20px 0 0;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #ffffff;
+}
+.header__villages-path p {
+  color: rgba(255, 255, 255, 0.5019607843);
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+}
+.header__villages-intro-block .header__intro-wrapper {
+  margin: unset;
+  width: 100%;
+}
+.header__subtitle-item {
+  color: #ffffff;
+  padding: 6% 0 2% 0;
+}
+.header__subtitle-item h1 {
+  font-size: 60px;
+  font-weight: 500;
+  line-height: 54px;
+}
+.header__subtitle-item p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 42px 0;
+}
+.header__villages-intro-checks {
+  padding-bottom: 14%;
+}
+.header__finishing {
+  background-image: url("../img/bg/bg_finishing.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 2% 0 12% 0;
+}
+.header__finishing .header__pay-path {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1490196078);
+}
+.header__finishing-intro-item {
+  text-align: center;
+  margin: 50px auto;
+}
+.header__finishing-intro-item h1 {
+  color: #ffffff;
+  font-size: 60px;
+  line-height: 60px;
+  font-weight: 500;
+}
+.header__finishing-intro-item p {
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  margin: 30px 0;
+}
+.header__finishing-card-item .territory__card-img {
+  display: flex;
+  align-items: center;
+}
+.header__finishing-card-item .territory__card-img h3 {
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #2C2C2C;
+  margin-left: 10px;
+}
+.header__finishing-card-item .territory__card-title p {
+  color: #5C5C5C;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+}
+.header__finishing-img img {
+  border-radius: 12px;
+}
+.header__finishing-subtitle button {
+  margin: 14px 0 0 0;
+}
+.header__mortgage {
+  background-image: url("../img/bg/bg_mortgage.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 2% 0 12% 0;
+}
+.header__mortgage .header__pay-path {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1490196078);
+}
+.header__mortgage-cards {
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  width: 100%;
+}
+.header__mortgage-card-item {
+  background-color: rgba(255, 255, 255, 0.1019607843);
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+  border-radius: 14px;
+  padding: 20px;
+}
+.header__mortgage-card-item p {
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 20px;
+  margin: 20px 0;
 }
 
 .villages {
@@ -1131,4 +1257,77 @@ td {
 .payment__subtitle-first {
   border-bottom: 1px solid #DFDFDF;
   padding-bottom: 20px;
+}
+
+.poselki {
+  background-color: #ffffff;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  margin-top: -20px;
+  padding: 8% 0;
+}
+
+.parametrs {
+  background-color: #F0F4FB;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  padding: 8% 0;
+}
+.parametrs__intro h1 {
+  text-align: center;
+  margin: 0 auto;
+  font-size: 60px;
+  font-weight: 500;
+  line-height: 60px;
+  color: #2C2C2C;
+}
+
+.documents {
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  background-color: #ffffff;
+  margin-top: -20px;
+  padding: 10% 0;
+}
+.documents__card-item {
+  display: flex;
+  flex-direction: column;
+  background-color: #F0F4FB;
+  padding: 30px;
+  border-radius: 12px;
+}
+.documents__card-img {
+  display: flex;
+  align-items: center;
+}
+.documents__card-img h4 {
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 500;
+  color: #2C2C2C;
+  margin: 0 10px;
+}
+.documents__card-subtitle {
+  margin: 12px 0;
+}
+.documents__card-subtitle p {
+  color: #888E93;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 17px;
+}
+.documents__cards-wrapper-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  margin: 20px 0;
+}
+.documents__card-w30 {
+  max-width: 30%;
+  width: 100%;
+}
+.documents__card-w70 {
+  max-width: 70%;
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
